Fixed a minor layout bug

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -136,7 +136,7 @@ h3 {
 
 @theme {
   --font-outfit: "Outfit", sans-serif;
-  --breakpoint-bsm: 425px;
+  --breakpoint-bsm: 500px;
 }
 
 .hero {
